# Video-Auto-Annotation

./: Greeting.md  README.md  pyproject.toml  requirements.txt  run_web.py
data/output/: annotation_results_20260328_160101.json  annotation_results_20260328_160130.json  annotation_results_20260328_160155.json  annotation_results_20260328_160347.json  annotation_results_20260328_160703.json
docs/: SECURITY.md
examples/: security_examples.py
scripts/: test_setup.py
src/video_agent/: main.py
src/video_agent/core/: ai_analyzer.py  config.py  video_processor.py
src/video_agent/models/: schemas.py
src/video_agent/utils/: mcp_client.py  security_utils.py
tests/: test_ai_analyzer.py  test_config.py  test_video_processor.py
web/backend/: __init__.py  app.py  database.py  models.py  schemas.py
web/backend/routes/: annotations.py  settings.py  tags.py  tasks.py
web/backend/services/: tag_manager.py  task_manager.py  ws_manager.py
web/frontend/: index.html  package-lock.json  tsconfig.app.json  vite.config.ts
web/frontend/src/: App.vue
web/frontend/src/composables/: useWebSocket.ts
web/frontend/src/stores/: setting.ts  task.ts
web/frontend/src/views/: AnnotationsView.vue  NotFoundView.vue  TagsView.vue  TaskDetailView.vue  TasksView.vue
web/src/api/: index.ts
web/src/router/: index.ts
web/src/stores/: tag.ts
web/src/types/: index.ts
web/src/views/: AnnotationsView.vue  SettingsView.vue  TagsView.vue  TaskDetailView.vue  TasksView.vue
